--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "diagnostics": "^1.1.1"
+  },
   "devDependencies": {
     "assume": "^2.1.0",
     "mocha": "^5.2.0",
